...
        textContentType="username"
        autoComplete="username"
        value={username}
        onChangeText={setUsername}
      />
      <TextInput
        testID="password-input"
        style={styles.input}
        placeholder={t.login.passwordPlaceholder}
        placeholderTextColor={colors.textSecondary}
        secureTextEntry
        textContentType="password"
        autoComplete="password"
...
